# planetarypy

./: .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  MODERNIZATION.md  Makefile  README.md  README.rst  ROADMAP.md  install_dev_deps.py  planetarypy.code-workspace  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_config_update.py  tox.ini
.github/workflows/: docs.yml  naif-smoke.yml  pds-smoke.yml  test.yaml
conda/: meta.yaml
docs/: .gitignore  AYE_MICHAEL_planetarypy_single_slide.pptx  README.md  _abbreviations.lua  _generate_factsheets.py  _quarto.yml  _renderer.py  _styles-abbr.css  build-reference.sh  cogbrowser.qmd  contributing.qmd  custom-slides.scss  factsheets.qmd  feature_poster.html  feature_poster.qmd  feature_slides.qmd  generate_poster.py  generate_poster_slides.py  index.qmd  pds_index_config.md  planetarypy_poster_v2_horizontal.pptx  planetarypy_poster_v3_bold_minimal.pptx  styles.css
docs/_freeze/tutorials/datasets_tutorial/execute-results/: html.json
docs/cogbrowser/: index.html
docs/cogbrowser/assets/: basedecoder-B9MSveFr.js  decoder-C7v5Jb9i.js  deflate-BmA-yNE8.js  index-CjWTuaff.js  jpeg-DacrVsGr.js  lerc-D3GUzI0D.js  lzw-g8vcOne0.js  packbits-GZth5uN_.js  pako.esm-CKAy9xRv.js  raw-O6YTYq51.js  webimage-BJB9ZY5I.js
docs/explanation/: catalog_normalization_plan.md  cli_implementation_summary.md  config_flow_diagram.qmd  constants_design.qmd  instrument_packages.qmd  pds_index_config.qmd  pds_index_download_flows.qmd  product_url_resolution.qmd
docs/howto/: cli.qmd  ctx_calib.ipynb  ctx_edr.ipynb  datasets.qmd  footprints_and_overlaps.qmd  hirise_rdr_red_batch.md  howto_autoseed.ipynb  howto_spice_archived.ipynb  isis_workflows.qmd  opening_data.qmd  pds_search.qmd  planetaryimage_today.qmd  print.prt  psa.qmd
docs/reference/: _sidebar.yml  cli.qmd  config.qmd  datetime_format_converters.qmd  dt_fmt_converters.qmd  exceptions.qmd  index.qmd  instruments.ctx.qmd  instruments.go_ssi.qmd  instruments.hirise.qmd  instruments.mro.ctx.qmd  instruments.mro.hirise.qmd  instruments.utils.qmd  pds.cli.qmd  pds.dynamic_index.qmd  pds.dynamic_url_handlers.qmd  pds.index_fixes.qmd  pds.index_labels.qmd  pds.index_logging.qmd  pds.index_main.qmd  pds.static_index.qmd  pds.utils.qmd  spice.archived_kernels.qmd  spice.config.qmd  spice.generic_kernels.qmd  spice.pckernels.qmd  utils.qmd
docs/tutorials/: _metadata.yml  constants_tutorial.ipynb  datasets_tutorial.qmd  geospatial_tutorial.ipynb  index.qmd  pds_catalog_tutorial.ipynb  pds_indexes_examples.ipynb  planetary_crs_tutorial.ipynb  spice_kernel_examples.ipynb  spicer_tutorial.ipynb
notebooks/: 1100r_ganymede_images.csv  Galileo_SSI_image_list_kersten_mosaic_ganymede.txt  access_log.ipynb  ctx_calib.ipynb  ctx_raw.ipynb  ganymede_ssr_images_that_match_paper_id.csv  go_ssr.ipynb  hirise.ipynb  pds_indexes_examples.ipynb  spice_kernel_examples.ipynb  url_handlers.ipynb
qdocs/: README.md  _quarto.yml  index.qmd
qdocs/explanation/: index.qmd
qdocs/fundamentals/: index.qmd
qdocs/howto/: howto_spice_archived.ipynb  index.qmd
qdocs/tutorials/: index.qmd  pds_indexes_examples.ipynb  spice_kernel_examples.ipynb
scripts/: build_nssdc_zenodo_bundle.py  constants_kernels.toml  download_go_ssi_ganymede.py  fetch_nssdc_archive.py  parse_nssdc_archive.py  regenerate_constants.py
src/planetarypy/: __init__.py  cli.py  config.py  crs.py  datetime_format_converters.py  exceptions.py  geo.py  io.py  plotting.py  psa.py  search.py  utils.py
src/planetarypy/catalog/: __init__.py  _download.py  _index_bridge.py  _index_resolver.py  _mission_map.py  _objects.py  _parser.py  _pattern_resolver.py  _repo.py  _resolver.py  _schema.py  _url_patterns.py  _url_rewrite.py  _validation.py  cli.py
src/planetarypy/constants/: __init__.py  _gm_jpl.py  base.py  iau2009.py  iau2015.py
src/planetarypy/constants/_constants_sources/: ROS_CGS_RSOC_V03.TPC  bennu_v17.tpc  dawn_ceres_v06.tpc  dawn_vesta_v04.tpc
src/planetarypy/constants/nssdc/: __init__.py  _loader.py
src/planetarypy/datasets/: __init__.py
src/planetarypy/instruments/: ctx.py  go_ssi.py  utils.py
src/planetarypy/instruments/go/: ssi.py
src/planetarypy/instruments/mro/: hirise.py
src/planetarypy/instruments/mro/ctx/: __init__.py  ctx_calib.py  ctx_edr.py
src/planetarypy/isis/: autoseed.py  projected.py
src/planetarypy/pds/: __init__.py  cli.py  ctx_index.py  dynamic_index.py  dynamic_remote.py  dynamic_url_handlers.py  index_config.py  index_fixes.py  index_labels.py  index_logging.py  index_main.py  indexes.py  indexes_remotes.py  lroc_index.py  meta_display.py  static_index.py  static_remote.py  utils.py
src/planetarypy/scripts/: __init__.py
src/planetarypy/spice/: __init__.py  _deps.py  archived_kernels.py  config.py  generic_kernels.py  pckernels.py  spicer.py
tests/: _test_spicer.py  conftest.py  test_catalog_download.py  test_catalog_fetch_open.py  test_catalog_fetch_products.py  test_catalog_index_bridge.py  test_catalog_mission_map.py  test_catalog_parser.py  test_catalog_schema.py  test_catalog_url_patterns.py  test_catalog_url_rewrite.py  test_clean_logging.py  test_cli.py  test_cli_batch_pids.py  test_cli_constants.py  test_cli_indexes.py  test_cli_indexes_select.py  test_cli_parse_ccds.py  test_cli_plugins.py  test_cli_search.py  test_cli_spice.py  test_config.py  test_constants_base.py  test_constants_nssdc_loader.py  test_constants_nssdc_parser.py  test_constants_public_api.py  test_constants_range_strategy.py  test_constants_vs_sources.py  test_crs.py  test_ctx_calib_shim.py  test_datasets.py  test_datetime.py  test_datetime_format_converters.py  test_exceptions.py  test_fetch_fast_path.py  test_geo.py  test_geo_antimeridian.py  test_geo_footprints.py  test_hirise.py  test_index_config.py  (+28 more)
tests/data/: test_index.lbl  test_index.tab
tools/: convert_docstrings.py
