[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "planetarypy"
version = "0.2.0"
description = "Core package for planetary data tools. Includes PDS index utilities, SPICE integrations, and more."
readme = "README.md"
requires-python = ">= 3.9, <4"
license = {text = "BSD license"}
authors = [
    {name = "Planetarypy Developers", email = "69774+michaelaye@users.noreply.github.com"}
]
keywords = ["planetarypy", "planetary", "space", "science"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# Core dependencies required for basic functionality
dependencies = [
    "astropy",         # For astronomy calculations
    "fastcore",        # For utilities like improved Path
    "numpy",           # For numerical operations
    "pandas",          # For data handling
    "pvl",             # For PDS label parsing
    "python-dateutil", # For date parsing
    "requests",        # For HTTP requests
    "tomlkit",         # For configuration handling
    "tqdm",            # For progress bars
    "yarl",            # For URL handling
]

[project.urls]
Homepage = "https://github.com/planetarypy/planetarypy"
Repository = "https://github.com/planetarypy/planetarypy"

[project.optional-dependencies]
# Optional dependencies for SPICE-related functionality
spice = [
    "spiceypy",       # For SPICE kernel handling
    "matplotlib",     # For plotting
    "planets>=0.8",   # For planetary calculations
]
# Development dependencies
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",  # For parallel test execution
    "build",
    "twine",
    "pip-tools",
    "sh",            # For running shell commands from Python
]

[project.scripts]
planetarypy = "planetarypy.cli:main"
planetarypy-migrate-config = "planetarypy.scripts.migrate_pds_config:main"

[tool.hatch.build.targets.wheel]
packages = ["src/planetarypy"]

[tool.hatch.build]
include = [
    "src/planetarypy/**/*.py",
    "src/planetarypy/**/*.pyd",
    "src/planetarypy/**/*.so",
    "LICENSE",
    "README.md",
    "HISTORY.rst",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """
    -xvs 
    --import-mode=importlib 
    --cov=planetarypy 
    --cov-report=term 
    --cov-report=html 
    -n auto
"""

[tool.coverage.run]
source = ["planetarypy"]
omit = [
    "*/tests/*", 
    "*/scripts/*", 
    "*/__init__.py", 
    "*/__main__.py", 
    "*/spicer.py",
    "*/pds/migrate_config.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.flake8]
exclude = ["docs"]
max-line-length = 88
extend-ignore = ["E203", "E701"]

[tool.bumpversion]
current_version = "0.2.0"
commit = true
tag = true